<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidSPP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_toggle_bt_state">Toggle Bluetooth state:</string>
    <string name="lbl_find_devices">Find devices:</string>
    <string name="lbl_scan">Scan</string>
    <string name="lbl_forward">Forward</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_left">Left</string>
    <string name="lbl_right">Right</string>
    <string name="lbl_control">Control</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="txt_get_distance">Get distance</string>
    <string name="txt_set_mode_hv">Set Mode HV</string>
    <string name="txt_set_mode_ml">Set Mode ML</string>
    <string name="txt_commands">Commands:</string>
    <string name="txt_clear_output">Clear output</string>

</resources>
